# mgiza

./: .gitignore  index.html  params.json
experimental/alignment-enabled/MGIZA/: config.status
experimental/bidirectional/src/: getSentence.cpp
experimental/dual-model/MGIZA/: Makefile  config.status
mgizapp/: CMakeLists.txt  INSTALL  Makefile.in  aclocal.m4
mgizapp/manual-compile/: compile.sh  transfer.sh
mgizapp/scripts/: CMakeLists.txt  force-align-moses.sh  merge_alignment.py  plain2snt-hasvcb.py  sntpostproc.py
mgizapp/src/: ATables.h  AlignTables.cpp  AlignTables.h  CMakeLists.txt  D4Tables.h  FlexArray.h  ForwardBackward.cpp  Globals.h  HMMTables.cpp  HMMTables.h  Makefile.am  Makefile.in  NTables.h  Parameter.cpp  Parameter.h  TTables.h  cmd.c  cmd.h  d4norm.cxx  file_spec.h  getSentence.cpp  getSentence.h  hmm.cpp  hmm.h  hmmnorm.cxx  logprob.cpp  logprob.h  main.cpp  model1.cpp  model1.h  model2.cpp  model3.cpp  model3.h  model3_viterbi.cpp  model3_viterbi_with_tricks.cpp  plain2snt.cpp  snt2cooc-reduce-mem-preprocess.cpp  symal.cpp  syncObj.h  utility.cpp  (+1 more)
mgizapp/src/mkcls/: CMakeLists.txt  KategProblem.cpp  KategProblemKBC.cpp  Makefile.in  (+4 more)
mgizapp/w32/: pthread.h
src/: syncObj.h
trunk/mgizapp/: CMakeLists.txt  INSTALL  configure
trunk/mgizapp/manual-compile/: compile.sh
trunk/mgizapp/scripts/: CMakeLists.txt  run.sh  snt2cooc.pl
trunk/mgizapp/src/: CMakeLists.txt  D4Tables.h  HMMTables.cpp  Makefile.am  Makefile.in  Parameter.cpp  Parameter.h  Perplexity.h  TTables.h  file_spec.h  getSentence.cpp  getSentence.h  hmm.cpp  hmmnorm.cxx  logprob.h  main.cpp  model1.cpp  model2to3.cpp  model3.cpp  model3_viterbi.cpp  mystl.h  plain2snt.cpp  snt2cooc-reduce-mem-preprocess.cpp  ttableDiff.hpp  utility.cpp
trunk/mgizapp/src/mkcls/: CMakeLists.txt  KategProblemKBC.cpp  general.cpp  myleda.h
v0.6.4/src/: D5Tables.h  SetArray.h  Vector.h  getSentence.cpp  snt2cooc.cpp  snt2plain.cpp
(+23 files in other folders)
